fix layout button shifting

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1292,6 +1292,7 @@ h1:before {
         border: none;
         cursor: pointer;
         width: 28px;
+        padding: 0px;
         .fas {
         font-size: 28px !important;
         color: #5d595a;
